--- a/mapbox_maps_api.html
+++ b/mapbox_maps_api.html
@@ -18,10 +18,18 @@
 
 
 <div id="map" style="height: 30rem; width: 30rem"></div>
-
+<br>
 <button id="elizabeth-restaurant">Elizabeth's Mexican Restaurant</button>
 <button id="olive-garden">Olive Garden</button>
 <button id="tiu-steppis">Tiu Steppi's</button>
+<button id="reset">Reset Zoom</button>
+<button id="hide-markers">Hide Markers</button>
+<br>
+<br>
+<div>
+    <input type="text" id="search-input" placeholder="Search for a location">
+    <button id="search-button">Search</button>
+</div>
 
 
 </body>
