made changes to ajax-blog.js and html

--- a/ajax-blog.html
+++ b/ajax-blog.html
@@ -13,14 +13,14 @@
 <h1>Blog</h1>
 <div id="posts">
     <table id="blogs">
-        <thead>
-        <tr>
-            <th>Title</th>
-            <th>Content</th>
-            <th>Categories</th>
-            <th>Date</th>
-        </tr>
-        </thead>
+<!--        <thead>-->
+<!--        <tr>-->
+<!--            <th>Title</th>-->
+<!--            <th>Content</th>-->
+<!--            <th>Categories</th>-->
+<!--            <th>Date</th>-->
+<!--        </tr>-->
+<!--        </thead>-->
         <tbody id="insertBlogs"></tbody>
     </table>
 
