--- a/mapbox_maps_api.html
+++ b/mapbox_maps_api.html
@@ -6,18 +6,18 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-
+<!--    Scripts-->
     <script src="js/keys.js"></script>
+<!--    Geocode-->
     <script src="js/mapbox-geocoder-utils.js"></script>
-
-
+<!--Mapbox-->
     <script src='https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js'></script>
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css' rel='stylesheet'/>
 </head>
 <body>
 
-
-<div id="map" style="height: 30rem; width: 30rem"></div>
+<h1 style="text-align: center">Mapbox API Exercise</h1>
+<div id="map" style="height: 40rem; width: 40rem"></div>
 <br>
 <button id="elizabeth-restaurant">Elizabeth's Mexican Restaurant</button>
 <button id="olive-garden">Olive Garden</button>
@@ -33,7 +33,8 @@
 
 
 </body>
-
+<!--JQuery-->
 <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
+<!--Javascript-->
 <script src="js/mapbox_maps_api.js"></script>
 </html>
