--- a/weather_map.html
+++ b/weather_map.html
@@ -6,24 +6,15 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Weather Map</title>
-
+    <!--Mapbox Link-->
+    <link href='https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css' rel='stylesheet'/>
+    <!--CSS-->
+    <link rel="stylesheet" href="css/weather_map.css">
 </head>
-<!--Javascript-->
-<script src="js/weather_map.js"></script>
-<!-- used to import minMaxTemps function -->
-<script src="js/min-max-temps.js"></script>
-<!-- include jQuery -->
-<script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
-<!-- include API key file -->
-<script src="js/keys.js"></script>
-<!--    Geocode-->
-<script src="js/mapbox-geocoder-utils.js"></script>
-<!--Mapbox-->
-<script src='https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js'></script>
-<link href='https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css' rel='stylesheet'/>
-<!--CSS-->
-<link rel="stylesheet" href="css/weather_map.css">
 <body>
+<div>
+    <h1 style="text-align: center">Weather Map</h1>
+</div>
 <div id="map" style="height: 40rem; width: 40rem"></div>
 
 
@@ -36,8 +27,18 @@
 
 
 
-
-
-
+<!-- include API key file -->
+<script src="js/keys.js"></script>
+<!-- include jQuery -->
+<script src="https://code.jquery.com/jquery-3.7.0.min.js"
+        integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
+<!--Mapbox-->
+<script src='https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js'></script>
+<!--    Geocode-->
+<script src="js/mapbox-geocoder-utils.js"></script>
+<!-- used to import minMaxTemps function -->
+<script src="js/min-max-temps.js"></script>
+<!--Javascript-->
+<script src="js/weather_map.js"></script>
 </body>
 </html>
