--- a/weather_map.html
+++ b/weather_map.html
@@ -8,31 +8,114 @@
     <title>Weather Map</title>
     <!--Mapbox Link-->
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css' rel='stylesheet'/>
-    <!--CSS-->
+    <!--Standard CSS Files-->
     <link rel="stylesheet" href="css/resets.css">
     <link rel="stylesheet" href="css/layout.css">
+    <!--Bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <!--Custom CSS-->
     <link rel="stylesheet" href="css/weather_map.css">
 </head>
 <body>
 <!--Header-->
-<div class="container">
-    <div class="row justify-space-between">
-        <div class="column shrink">
-            <h1>Weather Map</h1>
+<div class="container-header d-flex  ">
+    <div class="row header-row d-flex align-items-center ">
+        <div class="col">
+            <h1 class="">Weather Map</h1>
         </div>
-        <div class="column shrink justify-center">
-            <p>Current City:</p>
+        <div class="col">
+            <h1 class="coffee-store fs-4">Current City:</h1>
         </div>
     </div>
 </div>
+<br>
 <!--Search Bar-->
 <div>
     <input type="text" id="search-input" placeholder="Search for a location">
     <button id="search-button">Search</button>
 </div>
 <br>
-<!--Map-->
-<div id="map" style="height: 40rem; width: 40rem"></div>
+<!--Hero-->
+<div class="container-hero">
+    <div class="row row-hero">
+        <div class="col">
+            <div class="card" style="width: 18rem;">
+                <div class="card-header">
+                    Featured
+                </div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">An item</li>
+                    <li class="list-group-item">A second item</li>
+                    <li class="list-group-item">A third item</li>
+                </ul>
+            </div>
+        </div>
+        <div class="col">
+            <div id="map" style="height: 20rem; width: 20rem"></div>
+        </div>
+    </div>
+</div>
+<!--Cards-->
+<div class="container-cards d-flex ">
+    <div class="row row-cards d-flex ">
+        <div class="column d-flex flex-wrap">
+            <div class="card" style="width: 18rem;">
+                <div class="card-header">
+                    Featured
+                </div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">An item</li>
+                    <li class="list-group-item">A second item</li>
+                    <li class="list-group-item">A third item</li>
+                </ul>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <div class="card-header">
+                    Featured
+                </div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">An item</li>
+                    <li class="list-group-item">A second item</li>
+                    <li class="list-group-item">A third item</li>
+                </ul>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <div class="card-header">
+                    Featured
+                </div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">An item</li>
+                    <li class="list-group-item">A second item</li>
+                    <li class="list-group-item">A third item</li>
+                </ul>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <div class="card-header">
+                    Featured
+                </div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">An item</li>
+                    <li class="list-group-item">A second item</li>
+                    <li class="list-group-item">A third item</li>
+                </ul>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <div class="card-header">
+                    Featured
+                </div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">An item</li>
+                    <li class="list-group-item">A second item</li>
+                    <li class="list-group-item">A third item</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+
 
 
 <!-- include API key file -->
