removed the row classes in weather_map.hmtl

--- a/weather_map.html
+++ b/weather_map.html
@@ -12,53 +12,39 @@
     <link rel="stylesheet" href="css/resets.css">
     <link rel="stylesheet" href="css/layout.css">
     <!--Bootstrap-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <!--Custom CSS-->
     <link rel="stylesheet" href="css/weather_map.css">
 </head>
 <body>
-<!--Header-->
-<div class="container-header d-flex  ">
-    <div class="row header-row d-flex align-items-center ">
-        <div class="col">
-            <h1 class="">Weather Map</h1>
+<div class="page-wrapper">
+    <!--HEADER-->
+    <div class="container-header d-flex flex-wrap">
+        <div class="col col-weather col-8">
+            <h1>Weather Map</h1>
         </div>
-        <div class="col">
-            <h1 class="coffee-store fs-4">Current City:</h1>
-        </div>
-    </div>
-</div>
-<br>
-<!--Search Bar-->
-<div>
-    <input type="text" id="search-input" placeholder="Search for a location">
-    <button id="search-button">Search</button>
-</div>
-<br>
-<!--Hero-->
-<div class="container-hero">
-    <div class="row row-hero">
-        <div class="col">
-            <div class="card" style="width: 18rem;">
-                <div class="card-header">
-                    Featured
-                </div>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item">An item</li>
-                    <li class="list-group-item">A second item</li>
-                    <li class="list-group-item">A third item</li>
-                </ul>
-            </div>
-        </div>
-        <div class="col">
-            <div id="map" style="height: 20rem; width: 20rem"></div>
+        <div class="col col-city col-4 ">
+            <h1 class=" fs-4">Current City:</h1>
         </div>
     </div>
-</div>
-<!--Cards-->
-<div class="container-cards d-flex ">
-    <div class="row row-cards d-flex ">
-        <div class="column d-flex flex-wrap">
+    <!--SEARCH BAR-->
+    <br>
+    <div class="container d-flex flex-wrap">
+        <input type="text" id="search-input" placeholder="Search for a location">
+        <br>
+        <button id="search-button">Search</button>
+    </div>
+    <br>
+    <!--MAP-->
+    <div class="container-hero">
+        <div class="col-map">
+            <div id="map" style="height: 20rem; width: 100rem"></div>
+        </div>
+    </div>
+    <!--CARDS-->
+    <div class="container con-cards d-flex flex-wrap ">
+        <div class="col d-flex flex-wrap gap-3 py-4">
             <div class="card" style="width: 18rem;">
                 <div class="card-header">
                     Featured
@@ -112,22 +98,16 @@
         </div>
     </div>
 </div>
-
-
-
-
-
-
-<!-- include API key file -->
+<!--include API key file -->
 <script src="js/keys.js"></script>
-<!-- include jQuery -->
+<!--include jQuery -->
 <script src="https://code.jquery.com/jquery-3.7.0.min.js"
         integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
 <!--Mapbox-->
 <script src='https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js'></script>
-<!--    Geocode-->
+<!--Geocode-->
 <script src="js/mapbox-geocoder-utils.js"></script>
-<!-- used to import minMaxTemps function -->
+<!--used to import minMaxTemps function -->
 <script src="js/min-max-temps.js"></script>
 <!--Javascript-->
 <script src="js/weather_map.js"></script>
