weather_map.html frontend is now complete

--- a/weather_map.html
+++ b/weather_map.html
@@ -30,9 +30,8 @@
     </div>
     <!--SEARCH BAR-->
     <br>
-    <div class="container d-flex flex-wrap">
+    <div class="container-search">
         <input type="text" id="search-input" placeholder="Search for a location">
-        <br>
         <button id="search-button">Search</button>
     </div>
     <br>
@@ -45,7 +44,7 @@
     <!--CARDS-->
     <div class="container con-cards d-flex flex-wrap ">
         <div class="col d-flex flex-wrap gap-3 py-4">
-            <div class="card" style="width: 18rem;">
+            <div class="card" style="width: 15rem;">
                 <div class="card-header">
                     Featured
                 </div>
@@ -55,7 +54,7 @@
                     <li class="list-group-item">A third item</li>
                 </ul>
             </div>
-            <div class="card" style="width: 18rem;">
+            <div class="card" style="width: 15rem;">
                 <div class="card-header">
                     Featured
                 </div>
@@ -65,7 +64,7 @@
                     <li class="list-group-item">A third item</li>
                 </ul>
             </div>
-            <div class="card" style="width: 18rem;">
+            <div class="card" style="width: 15rem;">
                 <div class="card-header">
                     Featured
                 </div>
@@ -75,7 +74,7 @@
                     <li class="list-group-item">A third item</li>
                 </ul>
             </div>
-            <div class="card" style="width: 18rem;">
+            <div class="card" style="width: 15rem;">
                 <div class="card-header">
                     Featured
                 </div>
@@ -85,7 +84,7 @@
                     <li class="list-group-item">A third item</li>
                 </ul>
             </div>
-            <div class="card" style="width: 18rem;">
+            <div class="card" style="width: 15rem;">
                 <div class="card-header">
                     Featured
                 </div>
