--- a/weather_map.html
+++ b/weather_map.html
@@ -24,8 +24,9 @@
         <div class="col col-weather col-8">
             <h1>Weather Map</h1>
         </div>
-        <div class="col col-city col-4 ">
+        <div class="col col-city col-4 gap-3">
             <h1 class=" fs-4">Current City:</h1>
+            <h1 id="current-city" class="fs-4"></h1>
         </div>
     </div>
     <!--SEARCH BAR-->
@@ -52,6 +53,7 @@
                     <li class="list-group-item">An item</li>
                     <li class="list-group-item">A second item</li>
                     <li class="list-group-item">A third item</li>
+                    <li class="list-group-item">A fourth item</li>
                 </ul>
             </div>
             <div class="card" style="width: 15rem;">
@@ -62,6 +64,7 @@
                     <li class="list-group-item">An item</li>
                     <li class="list-group-item">A second item</li>
                     <li class="list-group-item">A third item</li>
+                    <li class="list-group-item">A fourth item</li>
                 </ul>
             </div>
             <div class="card" style="width: 15rem;">
@@ -72,6 +75,7 @@
                     <li class="list-group-item">An item</li>
                     <li class="list-group-item">A second item</li>
                     <li class="list-group-item">A third item</li>
+                    <li class="list-group-item">A fourth item</li>
                 </ul>
             </div>
             <div class="card" style="width: 15rem;">
@@ -82,6 +86,7 @@
                     <li class="list-group-item">An item</li>
                     <li class="list-group-item">A second item</li>
                     <li class="list-group-item">A third item</li>
+                    <li class="list-group-item">A fourth item</li>
                 </ul>
             </div>
             <div class="card" style="width: 15rem;">
@@ -92,6 +97,7 @@
                     <li class="list-group-item">An item</li>
                     <li class="list-group-item">A second item</li>
                     <li class="list-group-item">A third item</li>
+                    <li class="list-group-item">A fourth item</li>
                 </ul>
             </div>
         </div>
