--- a/layout.html
+++ b/layout.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Ysabeau:wght@100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/resets.css">
     <link rel="stylesheet" href="css/layout.css">
-    <link rel="stylesheet" href="css/layout-exercise.css">
+    <link rel="stylesheet" href="css/layout.css">
 
 </head>
 <body>
