--- a/weather_map.html
+++ b/weather_map.html
@@ -26,7 +26,7 @@
         </div>
         <div class="col col-city col-4 gap-3">
             <h1 class=" fs-4">Current City:</h1>
-            <h1 id="current-city" class="fs-4"></h1>
+            <div id="current-city" class="fs-4"></div>
         </div>
     </div>
     <!--SEARCH BAR-->
@@ -39,13 +39,19 @@
     <!--MAP-->
     <div class="container-hero">
         <div class="col-map">
-            <div id="map" style="height: 20rem; width: 100rem"></div>
+            <div id="map" style="height: 25rem; width: 100rem"></div>
         </div>
     </div>
     <!--CARDS-->
     <div class="container con-cards d-flex flex-wrap ">
-        <div class="col d-flex flex-wrap gap-3 py-4">
-            <div class="card" style="width: 15rem;">
+        <div class="col d-flex flex-wrap justify-content-evenly py-4">
+            <div id="card1" class="card" style="width: 15rem;">
+                <div class="card-header">
+                    Featured
+                </div>
+                <div class="card-body" id="card1-content"></div>
+            </div>
+            <div id="card2" class="card" style="width: 15rem;">
                 <div class="card-header">
                     Featured
                 </div>
@@ -56,7 +62,7 @@
                     <li class="list-group-item">A fourth item</li>
                 </ul>
             </div>
-            <div class="card" style="width: 15rem;">
+            <div id="card3" class="card" style="width: 15rem;">
                 <div class="card-header">
                     Featured
                 </div>
@@ -67,7 +73,7 @@
                     <li class="list-group-item">A fourth item</li>
                 </ul>
             </div>
-            <div class="card" style="width: 15rem;">
+            <div id="card4" class="card" style="width: 15rem;">
                 <div class="card-header">
                     Featured
                 </div>
@@ -78,18 +84,7 @@
                     <li class="list-group-item">A fourth item</li>
                 </ul>
             </div>
-            <div class="card" style="width: 15rem;">
-                <div class="card-header">
-                    Featured
-                </div>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item">An item</li>
-                    <li class="list-group-item">A second item</li>
-                    <li class="list-group-item">A third item</li>
-                    <li class="list-group-item">A fourth item</li>
-                </ul>
-            </div>
-            <div class="card" style="width: 15rem;">
+            <div id="card5" class="card" style="width: 15rem;">
                 <div class="card-header">
                     Featured
                 </div>
