still working on search city populating

--- a/weather_map.html
+++ b/weather_map.html
@@ -49,7 +49,12 @@
                 <div class="card-header">
                     Featured
                 </div>
-                <div class="card-body" id="card1-content"></div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">An item</li>
+                    <li class="list-group-item">A second item</li>
+                    <li class="list-group-item">A third item</li>
+                    <li class="list-group-item">A fourth item</li>
+                </ul>
             </div>
             <div id="card2" class="card" style="width: 15rem;">
                 <div class="card-header">
