--- a/weather_map.html
+++ b/weather_map.html
@@ -44,63 +44,7 @@
     </div>
     <!--CARDS-->
     <div class="container con-cards d-flex flex-wrap ">
-        <div class="col d-flex flex-wrap justify-content-evenly py-4">
-            <div id="card1" class="card" style="width: 15rem;">
-                <div class="card-header">
-                    Featured
-                </div>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item">An item</li>
-                    <li class="list-group-item">A second item</li>
-                    <li class="list-group-item">A third item</li>
-                    <li class="list-group-item">A fourth item</li>
-                </ul>
-            </div>
-            <div id="card2" class="card" style="width: 15rem;">
-                <div class="card-header">
-                    Featured
-                </div>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item">An item</li>
-                    <li class="list-group-item">A second item</li>
-                    <li class="list-group-item">A third item</li>
-                    <li class="list-group-item">A fourth item</li>
-                </ul>
-            </div>
-            <div id="card3" class="card" style="width: 15rem;">
-                <div class="card-header">
-                    Featured
-                </div>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item">An item</li>
-                    <li class="list-group-item">A second item</li>
-                    <li class="list-group-item">A third item</li>
-                    <li class="list-group-item">A fourth item</li>
-                </ul>
-            </div>
-            <div id="card4" class="card" style="width: 15rem;">
-                <div class="card-header">
-                    Featured
-                </div>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item">An item</li>
-                    <li class="list-group-item">A second item</li>
-                    <li class="list-group-item">A third item</li>
-                    <li class="list-group-item">A fourth item</li>
-                </ul>
-            </div>
-            <div id="card5" class="card" style="width: 15rem;">
-                <div class="card-header">
-                    Featured
-                </div>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item">An item</li>
-                    <li class="list-group-item">A second item</li>
-                    <li class="list-group-item">A third item</li>
-                    <li class="list-group-item">A fourth item</li>
-                </ul>
-            </div>
-        </div>
+        <div id="cards" class="col d-flex flex-wrap justify-content-evenly py-4 gap-2"></div>
     </div>
 </div>
 <!--include API key file -->
@@ -114,6 +58,8 @@
 <script src="js/mapbox-geocoder-utils.js"></script>
 <!--used to import minMaxTemps function -->
 <script src="js/min-max-temps.js"></script>
+<!--Bootstrap-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 <!--Javascript-->
 <script src="js/weather_map.js"></script>
 </body>
