finished with functionality

--- a/weather_map.html
+++ b/weather_map.html
@@ -39,12 +39,12 @@
     <!--MAP-->
     <div class="container-hero">
         <div class="col-map">
-            <div id="map" style="height: 25rem; width: 100rem"></div>
+            <div id="map" style="height: 25rem; width: 105rem"></div>
         </div>
     </div>
     <!--CARDS-->
-    <div class="container con-cards d-flex flex-wrap ">
-        <div id="cards" class="col d-flex flex-wrap justify-content-evenly py-4 gap-2"></div>
+    <div class="container-fluid con-cards d-flex flex-wrap ">
+        <div id="cards" class="col cards-col d-flex flex-wrap justify-content-evenly py-4 gap-2"></div>
     </div>
 </div>
 <!--include API key file -->
