added background img and css styling

--- a/weather_map.html
+++ b/weather_map.html
@@ -22,11 +22,11 @@
     <!--HEADER-->
     <div class="container-header d-flex flex-wrap">
         <div class="col col-weather col-8">
-            <h1>Weather Map</h1>
+            <h1 class="fs-1">Weather Map</h1>
         </div>
         <div class="col col-city col-4 gap-3">
-            <h1 class=" fs-4">Current City:</h1>
-            <div id="current-city" class="fs-4"></div>
+            <h1 class=" fs-1">Current City:</h1>
+            <div id="current-city" class="fs-1"></div>
         </div>
     </div>
     <!--SEARCH BAR-->
