added updates to map-filter-reduce-lesson.html, js and css

--- a/map-filter-reduce-lesson.html
+++ b/map-filter-reduce-lesson.html
@@ -1,14 +1,23 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="js/map-filter-reduce-lesson.js"></script>
+    <link rel="stylesheet" href="./css/resets.css">
+    <link rel="stylesheet" href="./css/layout.css">
+    <link rel="stylesheet" href="./css/map-filter-reduce-lesson.css">
 </head>
 <body>
+<div class="page-wrapper">
+    <div class="container">
+        <div class="row">
+            <div class="houses gap-25" id="houses">
 
+            </div>
+        </div>
+    </div>
+</div>
+<script src="./js/map-filter-reduce-lesson.js"></script>
 </body>
 </html>
