--- a/map-filter-reduce-lesson.html
+++ b/map-filter-reduce-lesson.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Map Filter Reduce Lesson</title>
     <link rel="stylesheet" href="./css/resets.css">
     <link rel="stylesheet" href="./css/layout.css">
     <link rel="stylesheet" href="./css/map-filter-reduce-lesson.css">
