--- a/promises-async.html
+++ b/promises-async.html
@@ -1,14 +1,55 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Promises Async</title>
+    <link rel="stylesheet" href="./css/resets.css">
+    <link rel="stylesheet" href="./css/layout.css">
+    <link rel="stylesheet" href="./css/promises-async.css">
 </head>
 <body>
+<div class="page-wrapper">
+    <div class="container grow characters">
+        <div class="row">
+            <table id="characters">
+                <thead>
+                <tr>
+                    <th>Character</th>
+                    <th>Height</th>
+                    <th>Mass</th>
+                    <th>Hair Color</th>
+                    <th>Skin Color</th>
+                    <th>Eye Color</th>
+                    <th>Birth Year</th>
+                    <th>Gender</th>
+                    <th></th>
+                </tr>
+                </thead>
+                <tbody>
 
-    <script src="js/promises-async.js"></script>
+                <tr>
+                    <td>
+                        <div class="d-flex gap-10 align-center">
+                            <img class="character-image" src="https://via.placeholder.com/50x50">
+                            <p class="character-name">Luke Skywalker</p>
+                        </div>
+                    </td>
+                    <td>Height</td>
+                    <td>Mass</td>
+                    <td>Hair Color</td>
+                    <td>Skin Color</td>
+                    <td>Eye Color</td>
+                    <td>Birth Year</td>
+                    <td>Gender</td>
+                    <td><button>delete</button></td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
+<!-- <script src="./js/promises.js"></script> -->
+<script src="./js/promises-async.js"></script>
 </body>
 </html>
