did a ctl,opt,l to promises-async.html

--- a/promises-async.html
+++ b/promises-async.html
@@ -27,7 +27,6 @@
                 </tr>
                 </thead>
                 <tbody>
-
                 <tr>
                     <td>
                         <div class="d-flex gap-10 align-center">
@@ -42,14 +41,15 @@
                     <td>Eye Color</td>
                     <td>Birth Year</td>
                     <td>Gender</td>
-                    <td><button>delete</button></td>
+                    <td>
+                        <button>delete</button>
+                    </td>
                 </tr>
                 </tbody>
             </table>
         </div>
     </div>
 </div>
-<!-- <script src="./js/promises.js"></script> -->
 <script src="./js/promises-async.js"></script>
 </body>
 </html>
