--- a/movie-project.html
+++ b/movie-project.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Promises Async</title>
+    <title>Movie Project</title>
     <link rel="stylesheet" href="./css/resets.css">
     <link rel="stylesheet" href="./css/layout.css">
     <link rel="stylesheet" href="./css/movie-project.css">
@@ -31,7 +31,7 @@
                     <td>
                         <div class="d-flex gap-10 align-center">
                             <img class="character-image" src="https://via.placeholder.com/50x50">
-                            <p class="character-name">Luke Skywalker</p>
+                            <p class="character-name">Somebody</p>
                         </div>
                     </td>
                     <td>Height</td>
